# PUT_SK2_Hangman

./: Message.h  README.md  config.h
client/: CMakeLists.txt  main.cpp  mywidget.cpp  mywidget.h  mywidget.ui
server/: CMakeLists.txt  Message.cpp  Message.h  Player.cpp  Player.h  PlayerState.h  Room.cpp  Room.h  Server.cpp  Server.h  ServerState.h  database_reader.h  main.cpp  player_states.h  room_states.h  server.cpp  server_config.h  server_define.h  words_database.txt
